--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Navbar -->
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
         <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
-            <a href="../index.html">
+            <a href="./index.html">
                 <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
             </a>
             <div>
-                <ul class="text-base md:text-xl max-lg:text-lg flex flex-col md:flex-row md:gap-6">
+                <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
                     <li>
                         <a href="./pages/about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
                     </li>
@@ -42,7 +42,6 @@
     </nav>
 
     <!-- About -->
-
     <section id="about"
         class="top sticky top-0 w-full bg-[#F36F64] pt-[200px] pb-[250px] overflow-x-clip lg:px-[300px] md:px-[24px] px-[24px] -z-10">
         <div class="flex items-center justify-center text-center">
@@ -51,7 +50,7 @@
                     class="top mb-10 text-2xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-slate-50">
                     Hello, I'm <span>Marija Popeska</span>
                 </h3>
-                <p class="top text-[22px] max-lg:text-lg text-slate-50">
+                <p class="top text-[18px] md:text-[22px] text-slate-50">
                     I'm a Product Designer & Frontend Developer who believes in the power of combining technology
                     and design to create something truly magical
                 </p>
@@ -61,7 +60,6 @@
     </section>
 
     <!-- Work -->
-
     <section id="work" class="bg-white lg:px-[300px] px-[24px] md:px-[24px] pt-1">
         <section class="container space-y-20 mx-auto p-10 md:py-20 px-0 md:p-20 md:px-0 antialiased">
             <!-- Project 1 -->
@@ -72,7 +70,7 @@
                             <h1
                                 class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
                                 Dipsakus</h1>
-                            <p class="text-slate-600 text-[22px] max-lg:text-lg">UX Design case study: research, design,
+                            <p class="text-slate-600 text-[18px] md:text-[22px]">UX Design case study: research, design,
                                 and
                                 development journey</p>
                         </div>
@@ -96,7 +94,7 @@
                             <h1
                                 class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
                                 Grocery App</h1>
-                            <p class="text-slate-600 text-[22px] max-lg:text-lg">Designing an intuitive mobile app for
+                            <p class="text-slate-600 text-[18px] md:text-[22px]">Designing an intuitive mobile app for
                                 seamless grocery delivery experience</p>
                         </div>
                         <div
@@ -119,7 +117,7 @@
                             <h1
                                 class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
                                 Cinevers</h1>
-                            <p class="text-slate-600 text-[22px] max-lg:text-lg">Cinevers -
+                            <p class="text-slate-600 text-[18px] md:text-[22px]">Cinevers -
                                 your gateway to the world of movies</p>
                         </div>
                         <div
@@ -143,7 +141,7 @@
                                 class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
                                 Design collection showcase</h1>
                         </div>
-                        <p class="text-slate-600 text-[22px] max-lg:text-lg">
+                        <p class="text-slate-600 text-[18px] md:text-[22px]">
                             Showcasing diverse projects and solutions
                         </p>
                         <div
@@ -163,19 +161,18 @@
     </section>
 
     <!-- Footer -->
-
     <footer id="contact" class="mt-10 md:mt-10 lg:mt-20">
         <div class="w-full lg:px-[300px] md:px-[24px] px-[24px] py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div>
                     <a href="./pages/about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl max-lg:text-lg font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
             </div>
-            <hr class="my-3 border-gray-300 sm:mx-auto lg:my-8" />
+            <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
                 <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
                     <ul class="flex gap-8 text-slate-800">
@@ -208,7 +205,7 @@
                         </li>
                     </ul>
                 </div>
-                <span class="currentYear text-sm md:text-sm text-slate-600 mt-10 md:mt-0 sm:text-center order-1"></span>
+                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
             </div>
         </div>
     </footer>
