--- a/pages/about.html
+++ b/pages/about.html
@@ -28,9 +28,9 @@
                 <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
             </a>
             <div>
-                <ul class="text-base md:text-xl max-lg:text-lg flex flex-col md:flex-row md:gap-6">
+                <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
                     <li>
-                        <a href="./about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
+                        <a href="./pages/about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
                     </li>
                     <li>
                         <a href="../index.html" class="text-[#F36F64]" data-page="index">Case studies</a>
@@ -130,23 +130,21 @@
     </section>
 
     <!-- Footer -->
-
     <footer id="contact" class="mt-10 md:mt-10 lg:mt-20">
         <div class="w-full lg:px-[300px] md:px-[24px] px-[24px] py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div>
                     <a href="./about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
             </div>
-            <hr class="my-3 border-slate-600 sm:mx-auto lg:my-8" />
+            <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
-                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
-                <div class="flex mt-4 sm:justify-center sm:mt-0">
-                    <ul class="flex gap-8">
+                <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
+                    <ul class="flex gap-8 text-slate-800">
                         <li
                             class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
                             <div class="flex items-center gap-3">
@@ -176,6 +174,7 @@
                         </li>
                     </ul>
                 </div>
+                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
             </div>
         </div>
     </footer>
