--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -25,10 +25,10 @@
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
         <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
             <a href="../index.html">
-                <img class="h-10 w-auto" src="../assets/img/dipsakus/m-logo.png" alt="">
+                <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
             </a>
             <div>
-                <ul class="text-base md:text-xl max-lg:text-lg flex flex-col md:flex-row md:gap-6">
+                <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
                     <li>
                         <a href="./about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
                     </li>
@@ -47,7 +47,7 @@
                     class="mb-6 md:mb-10 text-3xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-[#F36F64]">
                     Dipsakus
                 </h3>
-                <p class="text-base md:text-xl lg:text-xl text-slate-600">
+                <p class="text-slate-600">
                     UX Design Case study: Elevating the Dipsakus hiking club experience
                 </p>
             </div>
@@ -239,23 +239,21 @@
     </section>
 
     <!-- Footer -->
-
     <footer id="contact" class="mt-10 md:mt-10 lg:mt-20">
         <div class="w-full lg:px-[300px] md:px-[24px] px-[24px] py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div>
                     <a href="./about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
             </div>
-            <hr class="my-3 border-slate-600 sm:mx-auto lg:my-8" />
+            <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
-                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
-                <div class="flex mt-4 sm:justify-center sm:mt-0">
-                    <ul class="flex gap-8">
+                <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
+                    <ul class="flex gap-8 text-slate-800">
                         <li
                             class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
                             <div class="flex items-center gap-3">
@@ -285,6 +283,7 @@
                         </li>
                     </ul>
                 </div>
+                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
             </div>
         </div>
     </footer>
