--- a/index.html
+++ b/index.html
@@ -55,71 +55,66 @@
 <body class="font-lato">
 	<!-- Navbar -->
 	<nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
-		<div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
-			<a href="./index.html">
-				<img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
-			</a>
-			<div>
-				<ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
-					<li>
-						<a href="./pages/about.html"
-							class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
-							data-page="index">About</a>
-					</li>
-					<li>
-						<a href="./index.html"
-							class="text-[#F36F64] relative text-md w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-[#F36F64] after:w-full after:origin-center"
-							data-page="index">Case studies</a>
-					</li>
-				</ul>
+		<div class="flex items-center justify-center py-6 px-[24px]">
+			<div class="flex justify-between w-full lg:w-[120vh]">
+				<a href="./index.html">
+					<img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
+				</a>
+				<div>
+					<ul class="text-[18px] md:text-[20px] flex gap-4 md:gap-6">
+						<li>
+							<a href="./pages/about.html"
+								class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+								data-page="index">About</a>
+						</li>
+						<li>
+							<a href="./index.html"
+								class="text-[#F36F64] relative text-md w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-[#F36F64] after:w-full after:origin-center"
+								data-page="index">Case studies</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</nav>
 
 	<!-- About -->
 	<section id="about"
-		class="sticky top top-0 w-full h-[650px] bg-[#F36F64]  pt-[200px] pb-[200px] lg:px-[300px] md:px-[24px] px-[24px] z-0">
-		<div class="flex items-center justify-center text-center">
-			<div class="lg:px-[300px] px-[24px] md:px-[24px] mx-auto flex flex-col justify-center" data-aos="fade-left"
-				data-aos-duration="700">
-				<h3
-					class="mb-10 text-2xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-slate-50">
-					Hello, I'm <span>Marija Popeska</span>
-				</h3>
-				<p class="text-[18px] md:text-[22px] text-slate-50 w-3xl mx-auto flex flex-col justify-center">
-					I'm a UX Designer & Developer who believes in the power of combining technology
-					and design to create something truly magical
-				</p>
+		class="sticky top top-0 w-full h-[650px] bg-[#F36F64] pt-[200px] pb-[200px] lg:px-[300px] px-[24px] z-0">
+		<div class="flex flex-col items-center justify-center text-center" data-aos="fade-left" data-aos-duration="700">
+			<h3 class="mb-10 lg:whitespace-nowrap text-2xl font-futura lg:text-5xl text-slate-50">
+				Hello, I'm <span>Marija Popeska</span>
+			</h3>
+			<p class="text-[18px] lg:text-[22px] text-slate-50 flex flex-col justify-center lg:w-[100vh]">
+				I'm a UX Designer & Developer who believes in the power of combining technology
+				and design to create something truly magical
+			</p>
 
-				<div class="z-50 relative">
-					<div class="text-[18px] mt-16 md:mt-20 mb-3 md:text-[22px] text-slate-50">
-						Get in touch
-					</div>
-					<div>
-						<div class="flex justify-center sm:mt-0 mb-2 md:mb-0">
-							<ul class="flex gap-6 text-slate-50">
-								<li
-									class="hover:opacity-100 transition-all ease-in-out duration-300 hover:text-slate-100">
-									<div class="flex items-center gap-3">
-										<span class="hover:animate-bounce">
-											<a href="https://www.linkedin.com/in/marija-p-b23912167/"
-												class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
-										</span>
-									</div>
-								</li>
-								<li
-									class="hover:opacity-100 transition-all ease-in-out duration-300 hover:text-slate-100">
-									<div class="flex items-center gap-3">
-										<span class="hover:animate-bounce">
-											<a href="mailto:marija.popeska@gmail.com"
-												class="home__social-icon text-2xl">
-												<i class='bx bx-envelope'></i>
-											</a>
-										</span>
-									</div>
-								</li>
-							</ul>
-						</div>
+			<div class="z-50 relative">
+				<div class="text-[18px] mt-16 md:mt-20 mb-3 md:text-[22px] text-slate-50">
+					Get in touch
+				</div>
+				<div>
+					<div class="flex justify-center sm:mt-0 mb-2 md:mb-0">
+						<ul class="flex gap-6 text-slate-50">
+							<li class="hover:opacity-100 transition-all ease-in-out duration-300 hover:text-slate-100">
+								<div class="flex items-center gap-3">
+									<span class="hover:animate-bounce">
+										<a href="https://www.linkedin.com/in/marija-p-b23912167/"
+											class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
+									</span>
+								</div>
+							</li>
+							<li class="hover:opacity-100 transition-all ease-in-out duration-300 hover:text-slate-100">
+								<div class="flex items-center gap-3">
+									<span class="hover:animate-bounce">
+										<a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+											<i class='bx bx-envelope'></i>
+										</a>
+									</span>
+								</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -309,64 +304,61 @@
 	</section>
 
 	<!-- Footer -->
-	<footer id="contact" class="mt-10 md:mt-10 lg:mt-20">
-		<div class="w-full lg:px-[300px] md:px-[24px] px-[24px] py-6 lg:py-8">
-			<div class="md:flex md:justify-between">
-				<div>
-					<a href="./pages/about.html" class="flex items-center">
-						<span
-							class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
-							Popeska</span>
-					</a>
-				</div>
+	<div class="flex justify-center px-6">
+		<div class="w-full lg:w-[120vh] flex flex-col justify-between mt-10 mb-4 lg:mt-20 lg:mb-10">
+			<div class="">
+				<a href="./about.html" class="flex items-center">
+					<span
+						class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
+						Popeska</span>
+				</a>
 			</div>
-			<hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
-			<div class="sm:flex sm:items-center sm:justify-between align-middle">
-				<div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
-					<ul class="flex gap-6 text-slate-800">
-						<li
-							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-							<div class="flex items-center gap-3">
-								<span class="hover:animate-bounce">
-									<a href="https://www.linkedin.com/in/marija-p-b23912167/"
-										class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
-								</span>
-							</div>
-						</li>
-						<li
-							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-							<div class="flex items-center gap-3">
-								<span class="hover:animate-bounce">
-									<a href="https://dribbble.com/marijapopeska" class="home__social-icon text-2xl"><i
-											class='bx bxl-dribbble'></i></a>
-								</span>
-							</div>
-						</li>
-						<li
-							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-							<div class="flex items-center gap-3">
-								<span class="hover:animate-bounce">
-									<a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
-											class='bx bxl-github'></i></a>
-								</span>
-							</div>
-						</li>
-						<li
-							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-							<div class="flex items-center gap-3">
-								<span class="hover:animate-bounce">
-									<a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
-										<i class='bx bx-envelope'></i>
-									</a>
-								</span>
-							</div>
-						</li>
-					</ul>
+			<div
+				class="sm:flex lg:flex justify-between items-center w-full border-t border-slate-300 pt-4 lg:pt-6 mt-4">
+				<ul class="flex gap-6 text-slate-800 lg:order-last mb-3 lg:mb-0">
+					<li
+						class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+						<div class="flex items-center gap-3">
+							<span class="hover:animate-bounce">
+								<a href="https://www.linkedin.com/in/marija-p-b23912167/"
+									class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
+							</span>
+						</div>
+					</li>
+					<li
+						class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+						<div class="flex items-center gap-3">
+							<span class="hover:animate-bounce">
+								<a href="https://dribbble.com/marijapopeska" class="home__social-icon text-2xl"><i
+										class='bx bxl-dribbble'></i></a>
+							</span>
+						</div>
+					</li>
+					<li
+						class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+						<div class="flex items-center gap-3">
+							<span class="hover:animate-bounce">
+								<a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
+										class='bx bxl-github'></i></a>
+							</span>
+						</div>
+					</li>
+					<li
+						class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+						<div class="flex items-center gap-3">
+							<span class="hover:animate-bounce">
+								<a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+									<i class='bx bx-envelope'></i>
+								</a>
+							</span>
+						</div>
+					</li>
+				</ul>
+				<div class="currentYear text-xs lg:text-sm text-slate-600 order-first lg:order-none">
 				</div>
-				<span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
 			</div>
 		</div>
-	</footer>
+	</div>
 
 	<!-- JS -->
 	<script src="./js/main.js"></script>
