--- a/pages/about.html
+++ b/pages/about.html
@@ -41,36 +41,37 @@
 <body class="font-lato">
     <!-- Navbar -->
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
-        <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
-            <a href="../index.html">
-                <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
-            </a>
-            <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
-                <li>
-                    <a href="./about.html"
-                        class="text-[#F36F64] relative text-md w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-[#F36F64] after:w-full after:origin-center"
-                        data-page="index">About</a>
-                </li>
-                <li>
-                    <a href="../index.html"
-                        class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
-                        data-page="index">Case studies</a>
-                </li>
-            </ul>
+        <div class="flex items-center justify-center py-6 px-[24px]">
+            <div class="flex justify-between w-full lg:w-[120vh]">
+                <a href="../index.html">
+                    <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
+                </a>
+                <ul class="text-[18px] lg:text-[20px] flex gap-4 lg:gap-6">
+                    <li>
+                        <a href="./about.html"
+                            class="text-[#F36F64] relative text-md w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-[#F36F64] after:w-full after:origin-center"
+                            data-page="index">About</a>
+                    </li>
+                    <li>
+                        <a href="../index.html"
+                            class="text-[#F36F64] relative text-md lg:w-fit lg:block lg:after:block lg:after:content-[''] lg:after:absolute lg:after:h-[2px] lg:after:bg-[#F36F64] lg:after:w-full lg:after:scale-x-0 lg:after:hover:scale-x-100 lg:after:transition lg:after:duration-300 lg:after:origin-center"
+                            data-page="index">Case studies</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <section id="about" class="pt-[150px] md:pt-[200px] lg:pt-[200px] pb-[50px] lg:px-[300px] md:px-[24px] px-[24px]">
+    <section id="about" class="pt-[150px] lg:pt-[200px] pb-[50px] px-[24px]">
         <div>
             <div class="flex justify-center">
-                <div class="w-full md:w-full lg:w-[60%]  pr-14 max-2xl:pr-20 max-xl:pr-14 max-lg:pr-0"
-                    data-aos="fade-left" data-aos-duration="700">
+                <div class="w-full lg:w-[100vh]" data-aos="fade-left" data-aos-duration="700">
                     <h3
-                        class="mb-6 flex justify-center items-center text-center text-3xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-[#F36F64]">
+                        class="mb-6 flex justify-center items-center text-center font-futura lg:text-5xl text-3xl text-[#F36F64]">
                         Hello
                     </h3>
                     <p
-                        class="mb-10 flex justify-center items-center text-center space-y-6 mt-6 text-base md:text-xl text-slate-600">
+                        class="mb-10 flex justify-center items-center text-center space-y-6 mt-6 text-base lg:text-xl text-slate-600">
                         I'm Marija Popeska, a friendly and
                         collaborative designer</p>
                     <picture class="flex justify-center">
@@ -79,7 +80,7 @@
                                             ../assets/img/hello.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
                         <img src="../assets/img/hello.jpg" alt="Final image">
                     </picture>
-                    <div class="space-y-6 mt-6 text-base md:text-xl text-slate-600">
+                    <div class="space-y-6 mt-6 text-base lg:text-xl text-slate-600">
                         <p>
                             Master of Architecture who transitioned into UX Design and Frontend
                             Development. I seamlessly merge my expertise in physical space design with digital
@@ -112,10 +113,10 @@
                     <blockquote class="flex justify-center text-xl max-lg:text-lg mt-6 italic text-[#F36F64]">
                         <p>Let's create something magical together</p>
                     </blockquote>
-                    <div class="flex flex-col md:flex-row justify-center md:justify-between items-center mt-10">
-                        <a href="../assets/pdf/CV-Marija-Popeska.pdf" download class="md:w-auto">
+                    <div class="flex flex-col lg:flex-row justify-center lg:justify-between items-center mt-10">
+                        <a href="../assets/pdf/CV-Marija-Popeska.pdf" download class="lg:w-auto">
                             <button
-                                class="bg-[#F36F64] text-white font-bold px-6 h-10 md:w-full rounded-3xl mb-4 md:mb-0 md:mr-4">
+                                class="bg-[#F36F64] text-white font-bold px-6 h-10 lg:w-full rounded-3xl mb-4 lg:mb-0 lg:mr-4">
                                 Download CV
                             </button>
                         </a>
@@ -165,64 +166,61 @@
     </section>
 
     <!-- Footer -->
-    <footer id="contact" class="mt-10 md:mt-10 lg:mt-20">
-        <div class="w-full lg:px-[300px] md:px-[24px] px-[24px] py-6 lg:py-8">
-            <div class="md:flex md:justify-between">
-                <div>
-                    <a href="./about.html" class="flex items-center">
-                        <span
-                            class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
-                            Popeska</span>
-                    </a>
-                </div>
+    <div class="flex justify-center px-6">
+        <div class="w-full lg:w-[120vh] flex flex-col justify-between mt-10 mb-4 lg:mt-20 lg:mb-10">
+            <div class="">
+                <a href="./about.html" class="flex items-center">
+                    <span
+                        class="self-center text-[18px] md:text-[20px] font-futura whitespace-nowrap text-[#F36F64]">Marija
+                        Popeska</span>
+                </a>
             </div>
-            <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
-            <div class="sm:flex sm:items-center sm:justify-between align-middle">
-                <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
-                    <ul class="flex gap-6 text-slate-800">
-                        <li
-                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-                            <div class="flex items-center gap-3">
-                                <span class="hover:animate-bounce">
-                                    <a href="https://www.linkedin.com/in/marija-p-b23912167/"
-                                        class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
-                                </span>
-                            </div>
-                        </li>
-                        <li
-                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-                            <div class="flex items-center gap-3">
-                                <span class="hover:animate-bounce">
-                                    <a href="https://dribbble.com/marijapopeska" class="home__social-icon text-2xl"><i
-                                            class='bx bxl-dribbble'></i></a>
-                                </span>
-                            </div>
-                        </li>
-                        <li
-                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-                            <div class="flex items-center gap-3">
-                                <span class="hover:animate-bounce">
-                                    <a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
-                                            class='bx bxl-github'></i></a>
-                                </span>
-                            </div>
-                        </li>
-                        <li
-                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
-                            <div class="flex items-center gap-3">
-                                <span class="hover:animate-bounce">
-                                    <a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
-                                        <i class='bx bx-envelope'></i>
-                                    </a>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
+            <div
+                class="sm:flex lg:flex justify-between items-center w-full border-t border-slate-300 pt-4 lg:pt-6 mt-4">
+                <ul class="flex gap-6 text-slate-800 lg:order-last mb-3 lg:mb-0">
+                    <li
+                        class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                        <div class="flex items-center gap-3">
+                            <span class="hover:animate-bounce">
+                                <a href="https://www.linkedin.com/in/marija-p-b23912167/"
+                                    class="home__social-icon text-2xl"><i class='bx bxl-linkedin'></i></a>
+                            </span>
+                        </div>
+                    </li>
+                    <li
+                        class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                        <div class="flex items-center gap-3">
+                            <span class="hover:animate-bounce">
+                                <a href="https://dribbble.com/marijapopeska" class="home__social-icon text-2xl"><i
+                                        class='bx bxl-dribbble'></i></a>
+                            </span>
+                        </div>
+                    </li>
+                    <li
+                        class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                        <div class="flex items-center gap-3">
+                            <span class="hover:animate-bounce">
+                                <a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
+                                        class='bx bxl-github'></i></a>
+                            </span>
+                        </div>
+                    </li>
+                    <li
+                        class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                        <div class="flex items-center gap-3">
+                            <span class="hover:animate-bounce">
+                                <a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+                                    <i class='bx bx-envelope'></i>
+                                </a>
+                            </span>
+                        </div>
+                    </li>
+                </ul>
+                <div class="currentYear text-xs lg:text-sm text-slate-600 order-first lg:order-none">
                 </div>
-                <span class="currentYear text-xs md:text-sm text-slate-600 sm:text-center"></span>
             </div>
         </div>
-    </footer>
+    </div>
 
     <!-- JS -->
     <script src="../js/main.js"></script>
